--- a/Diary/MainStoryboard.storyboard
+++ b/Diary/MainStoryboard.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="XSO-UD-jfG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="XSO-UD-jfG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment defaultVersion="1808" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
-        <!--Entry List View Controller - Diary Entries-->
+        <!--Diary Entries-->
         <scene sceneID="wgf-zG-jlC">
             <objects>
                 <tableViewController id="XKo-J1-aqI" customClass="THEntryListViewController" sceneMemberID="viewController">
@@ -85,7 +86,7 @@
             </objects>
             <point key="canvasLocation" x="927" y="680"/>
         </scene>
-        <!--New Entry View Controller - Enter Your Thoughts-->
+        <!--Timeline-->
         <scene sceneID="YHC-4O-HK2">
             <objects>
                 <viewController id="rAU-Eh-yUk" customClass="THNewEntryViewController" sceneMemberID="viewController">
@@ -120,7 +121,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Enter Your Thoughts" id="t3s-hu-m1Q">
+                    <navigationItem key="navigationItem" title="Timeline" id="t3s-hu-m1Q">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="tJw-VS-Jcj">
                             <connections>
                                 <action selector="cancelWasPressed:" destination="rAU-Eh-yUk" id="o66-DE-NrU"/>
